feat(core): report history api's implemented
